feat: 对接message列表以及Memorialized pets
